--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -19,7 +19,8 @@
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "nodemailer": "^4.7.0"
+    "nodemailer": "^4.7.0",
+    "unique-random": "^2.0.0"
   },
   "devDependencies": {
     "holderjs": "^2.9.6",
